--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,7 +7,19 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Button Content="Button" HorizontalAlignment="Center" Height="58" Margin="0,270,0,0" VerticalAlignment="Top" Width="280" Click="Button_Click"/>
+        <Button Content="show input" HorizontalAlignment="Left" Height="58" Margin="10,156,0,0" VerticalAlignment="Top" Width="280" Click="Button_Click"/>
+        <Label x:Name="TextS" Content="" HorizontalAlignment="Left" Margin="31,14,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="331" Height="97" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="20" Background="#FFB0C2D5">
+            <Label.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0.75"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Label.RenderTransform>
+        </Label>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="400,335,0,0" VerticalAlignment="Top" Height="59" Width="120"/>
+        <TextBox x:Name="InputName" HorizontalAlignment="Left" Margin="391,66,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
 
     </Grid>
 </Window>
